Add another screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,10 @@ kapt {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'androidx.core:core-ktx:1.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.hannesdorfmann.mosby3:mvp:3.1.1'
@@ -43,7 +44,8 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     kapt 'android.arch.persistence.room:compiler:1.1.1'
-//    implementation 'com.airbnb.android:epoxy:3.1.0'
+    implementation 'com.airbnb.android:epoxy:3.2.0'
 //     Add the annotation processor if you are using Epoxy's annotations (recommended)
-//    annotationProcessor 'com.airbnb.android:epoxy-processor:3.1.0'
+    kapt 'com.airbnb.android:epoxy-processor:3.2.0'
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 }
